Modernize dependencies, fix security issues, migrate Sink API, add tests
Four workstreams from the repo audit. Full `mvn verify` is green across all
9 modules (unit tests + PMD + RAT license check).

WS1 — Dependency/plugin/build updates
- Bump 16 libraries and 8 Maven plugins; Maven wrapper 3.8.4 -> 3.9.9.
- Fix build on JDK 23+/25: declare Lombok via annotationProcessorPaths and
  bump to 1.18.40 (implicit annotation processing was dropped in JDK 23+).
- Run Mockito as a launch-time -javaagent in flink-common/flink-jdbc-sink
  (JDK 21+ blocks runtime self-attach for the inline mock maker); Mockito 5.18.0.
- Pin Netty via netty-bom; keep PMD on the last PMD-6 line (3.21.2).
- mavenpublish.yml / Jenkinsfile JDK 11 -> 17; pin/refresh Docker images.
- aws-secretsmanager-caching kept at 1.0.2 (2.0.0 is an AWS SDK v1->v2 break).

WS2 — Security fixes
- Redis and JDBC passwords now @ToString.Exclude (Redis password was logged
  at INFO); externalize hardcoded secrets in application.yml/docker-compose.
- Validate the configured AWS schema-naming class before instantiating it.
- Replace deprecated Class#newInstance; add .github/dependabot.yml.

WS3 — Test-gap closure (14 new test classes, ~49 tests)
- flink-snapshot went from 0 tests to covered.
- Establish the KeyedOneInputStreamOperatorTestHarness pattern
  (ProcessRatesFunctionTest) for keyed operator logic.

WS4 — Deprecated Flink Sink API migration
- SinkDefinition#buildSink SinkFunction<T> -> Sink2 Sink<T>; consumers use
  sinkTo(); deprecated DiscardingSink -> sink.v2.DiscardingSink. Migrate the
  two affected tests to Sink2 SinkWriter.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>